--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,45 @@
 # Core
-streamlit==1.39.0
-pandas==2.2.3
-numpy==2.1.2
-python-dotenv==1.0.1
+streamlit
+pandas
+numpy
+python-dotenv
 
 # Dhan Trading
-dhanhq==1.3.5
+dhanhq
 
 # AI/ML
-openai==1.54.3
-langchain==0.3.7
-langchain-openai==0.2.8
-langchain-community==0.3.5
+openai
+langchain
+langchain-openai
+langchain-community
 
 # Technical Analysis
-pandas-ta==0.3.14b
-ta==0.11.0
-ta-lib==0.4.32
+pandas-ta
+ta
+ta-lib
 
 # Visualization
-plotly==5.24.1
-matplotlib==3.9.2
+plotly
+matplotlib
 
 # Async
-nest-asyncio==1.6.0
-aiohttp==3.10.10
-websocket-client==1.8.0
+nest-asyncio
+aiohttp
+websocket-client
 
 # Database
-sqlalchemy==2.0.35
-alembic==1.13.3
+sqlalchemy
+alembic
 
 # Utils
-pytz==2024.2
-requests==2.32.3
-pyyaml==6.0.2
+pytz
+requests
+pyyaml
 
 # Logging
-loguru==0.7.2
+loguru
 
 # Testing
-pytest==8.3.3
-pytest-asyncio==0.24.0
-pytest-cov==5.0.0
+pytest
+pytest-asyncio
+pytest-cov
